# banana-peel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES  pyproject.toml
docs/brainstorms/: 2026-03-23-daemon-mode-requirements.md
docs/plans/: 2026-03-23-001-feat-gemini-watermark-remover-watcher-plan.md  2026-03-23-002-feat-daemon-background-mode-plan.md  2026-03-26-001-feat-raycast-extension-builder-skill-plan.md  2026-03-26-002-feat-ai-powered-image-renaming-plan.md  2026-03-26-003-feat-jpg-compression-output-plan.md  2026-03-26-004-feat-image-resize-max-dimension-plan.md
src/banana_peel/: __init__.py  __main__.py  cli.py  compressor.py  config.py  daemon.py  jpg.py  notify.py  processor.py  renamer.py  service.py  watcher.py  watermark.py
tests/: conftest.py  test_cli.py  test_compressor.py  test_daemon.py  test_jpg.py  test_processor.py  test_renamer.py  test_resize.py  test_service.py  test_watermark.py
